src/main/metadata-excluded/objects/Status_Report__c.object
<CustomObject>
    <description>PMO: Status report header</description>
    <fields>
        <fullName>Accomplishments_this_Period__c</fullName>
        <description>Describes tasks completed during the past week</description>
        <inlineHelpText>Describes tasks completed during the past week</inlineHelpText>
        <label>Accomplishments this Period</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <description>Budget Status</description>
        <label>Budget Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Budget Status Indicator</description>
        <formula>IMAGE( 
CASE( Budget_Status__c , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;budget status indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Distribution_List__c</fullName>
        <description>List of client team members to send the status report</description>
        <label>Client Distribution List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cust_Sat__c</fullName>
        <description>Customer Satisfaction Indicator</description>
        <formula>IMAGE( 
CASE(   Customer_Satisfaction__c , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;cust sat indicator&quot;)</formula>
        <label>Cust Sat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name</description>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <description>Rate the level of Customer Satisfaction as perceived by the Project Executive Sponsor</description>
        <inlineHelpText>Rate the level of Customer Satisfaction as perceived by the Project Executive Sponsor</inlineHelpText>
        <label>Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Due_Date__c</fullName>
        <description>Date of which all status report details are due so the Project Manager can process the input.</description>
        <label>Detail Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iteration</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Iteration should for the same project.</errorMessage>
            <filterItems>
                <field>Iteration__c.Phase__r.Project_Overview__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project_Overview__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>Status_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>Overall Status</description>
        <label>Overall Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall__c</fullName>
        <description>Overall Status Indicator</description>
        <formula>IMAGE( 
CASE(  Overall_Status__c , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;overall status indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHC_Name__c</fullName>
        <description>Project Health Check Name</description>
        <formula>Project_Overview__r.Name +  &quot;-&quot;+ TEXT(Report_Date__c )+ &quot;-Post Sales Health Check&quot;</formula>
        <label>PHC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_but_Not_Accomplished__c</fullName>
        <description>Describes tasks not completed but were planned to be done</description>
        <inlineHelpText>Describes tasks not completed but were planned to be done</inlineHelpText>
        <label>Planned, but Not Accomplished</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_for_Next_Period__c</fullName>
        <description>Describes tasks that are planned to be undertaken next week</description>
        <inlineHelpText>Describes tasks that are planned to be undertaken next week</inlineHelpText>
        <label>Planned for Next Period</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>Project identifier</description>
        <label>Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Project</description>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>R00N80000002QnvqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Schedule__c</fullName>
        <description>G/Y/R status re project schedule</description>
        <inlineHelpText>PM: How are we progressing vs. the agreed upon project timeline?</inlineHelpText>
        <label>Project Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <description>G/Y/R status re project scope</description>
        <inlineHelpText>PM: How close are we to the latest approved scope (i.e. original SOW + latest CO&apos;s)</inlineHelpText>
        <label>Project Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <description>Date of status report</description>
        <label>Report Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <description>Resource Status</description>
        <label>Resource Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Resource Status Indicator</description>
        <formula>IMAGE( 
CASE(   Resource_Status__c , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;resource status indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_com_Distribution_List__c</fullName>
        <description>List of Salesforce.com team members to send the status report</description>
        <label>Salesforce.com Distribution List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sched__c</fullName>
        <description>Project Schedule Indicator</description>
        <formula>IMAGE( 
CASE(   Project_Schedule__c  , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;sched status indicator&quot;)</formula>
        <label>Sched</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Project Scope Indicator</description>
        <formula>IMAGE( 
CASE(   Project_Scope__c  , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;scope indicator&quot;)</formula>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Update from Track Owners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_Date__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Budget_Status__c</columns>
        <columns>Overall__c</columns>
        <columns>Resource__c</columns>
        <columns>Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{YY}{MM}{0000}</displayFormat>
        <label>Status Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <recordTypes>
        <fullName>Centralized</fullName>
        <active>true</active>
        <description>Enter status progress in a single form</description>
        <label>Centralized</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributed</fullName>
        <active>true</active>
        <description>Enable Track Owners to submit project status feedback.</description>
        <label>Distributed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>